--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,3 +1,3 @@
 {{ define "main" }}
-    <h1 class="text-3xl text-blue-700 font-bold underline">I am a new site!</h1>
+    <h1 class="text-3xl text-blue-700 font-bold underline"></h1>
 {{ end }}
